tests/ui/unsafe/unsafe-borrow.mirunsafeck.stderr
error[E0133]: mutation of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/unsafe-borrow.rs:13:18
   |
LL |     let a = &mut foo.0[2];
   |                  ^^^^^ mutation of layout constrained field
   |
   = note: mutating layout constrained fields cannot statically be checked for valid values

error[E0133]: mutation of layout constrained field is unsafe and requires unsafe function or block
  --> $DIR/unsafe-borrow.rs:23:18
   |
LL |     let a = &mut foo.0[2];
   |                  ^^^^^ mutation of layout constrained field
   |
   = note: mutating layout constrained fields cannot statically be checked for valid values

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
